...
                    color = Color.Black.copy(alpha = 0.70f),
                    contentColor = Color.White,
                ) {
                    Box(contentAlignment = Alignment.Center) {
                        Icon(
                            Icons.Rounded.Download,
                            contentDescription = "Download",
                            modifier = Modifier.size(17.dp),
                        )
                    }
                }
            }
        }
...
